
2018-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: added defines for not yet implemented standard
	  I-O status values

2018-07-12  Ron Norman <rjn@inglenet.com>
	* call.c: Added cob_get_name_line to return source line of CALL
	          Added cob_field_value to copy field & set COB_FLAG_VALUE
	          Added cob_field_content to copy field & set COB_FLAG_CONTENT

2018-07-05  Ron Norman <rjn@inglenet.com>
	* coblocal.h,common.c: Added runtime.cfg options for COB_LS_SPLIT
	* fileio.c: Added checks for runtime.cfg options for split or truncate
	   LINE SEQUENTIAL records which are longer than expected

2018-07-04  Ron Norman <rjn@inglenet.com>
	* common.h: Added COB_MF_LS_SPLIT flag
	* fileio.c:
	  Added check for IO_fdname having 'ls_split' for 
	  Micro Focus compatible LINE SEQUENTIAL files.
	  When a record is longer than the program was compiled for
	  Micro Focus will return the extra data as an extra record.
	  This is the result for when IO_fdname has ls_split.
	  For 'GC' format LINE SEQUENTIAL or for 'nols_split' a long
	  record will get truncated and skip to the next LF.

2018-06-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: Updates to the EXTFH logic 
	   You can now actually compile using MF Visual COBOL and include the
	   GnuCOBOL libcob as follows:
	     cob -L/usr/local/lib -lcob -C "CALLFH=EXTFH" 

2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h, common.h: merged changes to time calculation
	  from trunk to reportwriter to fix all known runtime issues on this
	  topic

2018-03-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (set_cob_time_offset): recreated for use on all systems,
	  moved code for computation of UTC there, including adjustment by
	  daylight saving time (which was missing from _WIN32 until now),
	  set unknown offset in the unlikely case that computation of
	  UTC offset does not work

2018-03-11  Ron Norman <rjn@inglenet.com>
