@@ -1,4 +1,7 @@
 
+2018-07-29  Ron Norman <rjn@inglenet.com>
+	* fileio.c: Added code to set COB_STATUS_53_MAX_LOCKS
+
 2018-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.h: added defines for not yet implemented standard
